add more blogs to elfeed

--- a/setup-elfeed.org
+++ b/setup-elfeed.org
@@ -103,6 +103,18 @@
 
       (setq elfeed-feeds
         '(("http://codeascraft.com/feed/" devops)
+           ("https://rachelbythebay.com/w/atom.xml" devops)
+           ("http://planetsysadmin.com/atom.xml" devops )
+           ("https://feeds.feedburner.com/sysadvent" devops )
+           ("https://planet.postgresql.org/rss20.xml" postgres )
+           ("https://blog.miguelgrinberg.com/feed" python )
+           ("http://planetpython.org/rss20.xml"  python )
+           ("http://planet.centos.org/atom.xml" linux centos)
+           ("http://kernelplanet.org/rss20.xml" linux )
+           ("http://planet.freedesktop.org/rss20.xml" linux )
+           ("http://feeds.networklore.com/Networklore" netops )
+           ("http://etherealmind.com/feed/" netops)
+           ;; emacs
            ("http://endlessparentheses.com/atom.xml" emacs)
            ("http://planet.emacsen.org/atom.xml" emacs)
            ("http://oremacs.com/atom.xml" emacs)
@@ -115,21 +127,15 @@
            ("https://www.masteringemacs.org/feed" emacs )
            ("http://karl-voit.at/feeds/lazyblorg-all.atom_1.0.links-and-content.xml" emacs)
            ("http://irreal.org/blog/?feed=rss2" emacs)
-           ("https://planet.postgresql.org/rss20.xml" devops postgres )
-           ("https://blog.miguelgrinberg.com/feed" devops python )
-           ("http://planetpython.org/rss20.xml" devops python )
-           ("http://planetsysadmin.com/atom.xml" devops )
-           ("https://feeds.feedburner.com/sysadvent" devops )
-           ("http://planet.centos.org/atom.xml" linux centos)
-           ("http://kernelplanet.org/rss20.xml" linux )
-           ("http://planet.freedesktop.org/rss20.xml" linux )
-           ("http://devopsreactions.tumblr.com/rss" devops fun)
-           ("http://feeds.networklore.com/Networklore" netops )
-           ("http://etherealmind.com/feed/" netops)
+           ("https://changelog.complete.org/feed" emacs blog)
+           ;; amusement
            ("http://xkcd.com/atom.xml" comics fun)
            ("https://what-if.xkcd.com/feed.atom" fun)
            ("http://americasgreatoutdoors.tumblr.com/rss" fun)
+           ;; misc
            ("https://www.youtube.com/feeds/videos.xml?user=polygon" youtube)
+           ("http://git-annex.branchable.com/tips/index.atom" gitannex)
+           ("http://git-annex.branchable.com/devblog/index.atom" gitannex)
            )
         url-queue-timeout 30
         elfeed-db-directory (concat user-emacs-directory "user/elfeed")
