--- a/setup-elfeed.org
+++ b/setup-elfeed.org
@@ -84,7 +84,8 @@
       (defun sf/elfeed-update ()
         "Update elfeed database"
         (message "Updating elfeed articles...")
-        (elfeed-update))
+        (elfeed-update)
+        (elfeed-db-save))
 
       (defun sf/elfeed-search-first-article ()
         "Go to first message in search"
@@ -103,7 +104,8 @@
 
       (setq elfeed-feeds
         '(("http://codeascraft.com/feed/" devops)
-           ("https://rachelbythebay.com/w/atom.xml" devops)
+           ("https://rachelbythebay.com/w/atom.xml" blog)
+           ("https://jpmens.net/atom.xml" blog)
            ("http://planetsysadmin.com/atom.xml" devops )
            ("https://feeds.feedburner.com/sysadvent" devops )
            ("https://planet.postgresql.org/rss20.xml" postgres )
@@ -120,10 +122,10 @@
            ("http://oremacs.com/atom.xml" emacs)
            ("http://pragmaticemacs.com/feed/" emacs)
            ("http://mbork.pl/?action=rss" emacs )
-           ("http://www.howardism.org/index.xml" emacs )
+           ("http://www.howardism.org/index.xml" emacs blog )
            ("http://feeds.feedburner.com/TheKitchinResearchGroup" emacs )
-           ("http://sachachua.com/blog/feed" emacs )
-           ("http://blog.aaronbieber.com/feed.xml" emacs )
+           ("http://sachachua.com/blog/feed" emacs blog )
+           ("http://blog.aaronbieber.com/feed.xml" emacs blog )
            ("https://www.masteringemacs.org/feed" emacs )
            ("http://karl-voit.at/feeds/lazyblorg-all.atom_1.0.links-and-content.xml" emacs)
            ("http://irreal.org/blog/?feed=rss2" emacs)
